# gHAndalf

./: .gitignore  README.md  REQUIREMENTS.md  hacs.json  pyproject.toml  requirements_dev.txt  requirements_test.txt  setup.cfg
.github/workflows/: ci.yml
custom_components/ghandalf/: __init__.py  binary_sensor.py  config_flow.py  config_schema.py  const.py  coordinator.py  helpers.py  intent.py  manifest.json  models.py  nudge_gate.py  rules.py  sensor.py  strings.json
custom_components/ghandalf/translations/: en.json
custom_sentences/en/: ghandalf.yaml
examples/: configuration-notes.md
tests/: __init__.py  conftest.py  test_config_flow.py  test_config_schema.py  test_coordinator.py  test_helpers.py  test_init.py  test_intent.py  test_nudge_gate.py  test_rules.py  test_sensor.py
