[project]
name = "ghandalf"
version = "0.1.0"
description = "A Home Assistant coach for better home-management habits."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["custom_components"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["custom_components.ghandalf"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["custom_components/ghandalf"]

[tool.coverage.report]
show_missing = true
